Migrating sinks to Java SE